@@ -159,6 +159,12 @@ AC_DEFUN([AC_NETATALK_SPOTLIGHT], [
       [ac_cv_tracker_prefix="`pkg-config --variable=prefix tracker-sparql-$ac_cv_tracker_pkg_version`"]
     )
 
+    AC_ARG_WITH([tracker-install-prefix],
+      [AS_HELP_STRING([--with-tracker-install-prefix=PATH],[Install prefix for Tracker (default: none)])],
+      [ac_cv_tracker_install_prefix=$withval],
+      [ac_cv_tracker_install_prefix=$ac_cv_tracker_prefix]
+    )
+
     dnl Tracker Managing Command
     AC_CHECK_PROGS(ac_cv_tracker_manage, tracker tracker-control, , ["$ac_cv_tracker_prefix"/bin])
     if test x"$ac_cv_tracker_manage" = x"tracker" ; then
@@ -167,8 +173,6 @@ AC_DEFUN([AC_NETATALK_SPOTLIGHT], [
     elif test x"$ac_cv_tracker_manage" = x"tracker-control" ; then
        TRACKER_MANAGING_COMMAND="tracker-control"
        AC_DEFINE(TRACKER_MANAGING_COMMAND, "tracker-control", [tracker managing command])
-    elif test x"$ac_cv_tracker_manage" = x"tracker-control" ; then
-       TRACKER_MANAGING_COMMAND="tracker-control"
     else
        AC_MSG_ERROR([could find neither tracker command nor tracker-control command])
     fi
@@ -190,7 +194,7 @@ AC_DEFUN([AC_NETATALK_SPOTLIGHT], [
     else
         ac_cv_have_tracker=yes
         AC_DEFINE(HAVE_TRACKER, 1, [Define if Tracker is available])
-        AC_DEFINE_UNQUOTED(TRACKER_PREFIX, ["$ac_cv_tracker_prefix"], [Path to Tracker])
+        AC_DEFINE_UNQUOTED(TRACKER_PREFIX, ["$ac_cv_tracker_install_prefix"], [Path to Tracker])
         AC_DEFINE_UNQUOTED([DBUS_DAEMON_PATH], ["$ac_cv_dbus_daemon"], [Path to dbus-daemon])
     fi
 
